--- a/index.html
+++ b/index.html
@@ -5,14 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Adarsh Malayath | Full Stack Developer</title>
     <meta
+      http-equiv="Content-Security-Policy"
+      content="default-src 'self'; base-uri 'self'; form-action 'self'; frame-ancestors 'none'; object-src 'none'; script-src 'self'; style-src 'self'; img-src 'self' data:; font-src 'self'; connect-src 'self'; upgrade-insecure-requests; block-all-mixed-content"
+    />
+    <meta http-equiv="Referrer-Policy" content="no-referrer" />
+    <meta name="referrer" content="no-referrer" />
+    <meta http-equiv="X-Content-Type-Options" content="nosniff" />
+    <meta
+      http-equiv="Permissions-Policy"
+      content="camera=(), microphone=(), geolocation=()"
+    />
+    <meta
       name="description"
       content="Portfolio website for Adarsh Malayath, full stack developer with banking technology experience in Java, PL/SQL, ReactJS, and production systems."
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&family=Sora:wght@500;600;700&display=swap"
-      rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
   </head>
@@ -44,7 +49,11 @@
           <a class="btn btn-primary" href="mailto:adarshmalayath@gmail.com"
             >Contact Me</a
           >
-          <a class="btn btn-secondary" href="CV%20IT.pdf" target="_blank"
+          <a
+            class="btn btn-secondary"
+            href="CV%20IT.pdf"
+            target="_blank"
+            rel="noopener noreferrer"
             >View CV</a
           >
         </div>
@@ -57,11 +66,17 @@
           </li>
           <li><a href="tel:+447721445027">+44 7721 445027</a></li>
           <li>
-            <a href="https://linkedin.com/in/adarshmalayath" target="_blank"
+            <a
+              href="https://linkedin.com/in/adarshmalayath"
+              target="_blank"
+              rel="noopener noreferrer"
               >LinkedIn</a
             >
             /
-            <a href="https://github.com/adarshmalayath" target="_blank"
+            <a
+              href="https://github.com/adarshmalayath"
+              target="_blank"
+              rel="noopener noreferrer"
               >GitHub</a
             >
           </li>
