--- a/admin.html
+++ b/admin.html
@@ -7,7 +7,7 @@
     <meta name="robots" content="noindex, nofollow, noarchive, nosnippet" />
     <meta
       http-equiv="Content-Security-Policy"
-      content="default-src 'self'; base-uri 'self'; form-action 'self'; frame-ancestors 'none'; object-src 'none'; script-src 'self' https://www.gstatic.com; style-src 'self'; img-src 'self' data:; font-src 'self'; connect-src 'self' https://*.googleapis.com https://*.firebaseapp.com https://*.web.app https://firebaseinstallations.googleapis.com; upgrade-insecure-requests; block-all-mixed-content"
+      content="default-src 'self'; base-uri 'self'; form-action 'self'; frame-ancestors 'none'; object-src 'none'; script-src 'self' https://www.gstatic.com https://apis.google.com; style-src 'self'; img-src 'self' data: https://*.googleusercontent.com; font-src 'self'; connect-src 'self' https://*.googleapis.com https://*.firebaseapp.com https://*.web.app https://firebaseinstallations.googleapis.com; frame-src https://accounts.google.com https://www.google.com https://*.google.com https://*.firebaseapp.com https://*.web.app; upgrade-insecure-requests; block-all-mixed-content"
     />
     <meta http-equiv="Referrer-Policy" content="no-referrer" />
     <meta http-equiv="X-Content-Type-Options" content="nosniff" />
@@ -24,33 +24,18 @@
           <p class="eyebrow">Portfolio Admin</p>
           <h1>Manage Website Content</h1>
           <p class="subtext">
-            Sign in with your private email and password, then edit the
-            portfolio JSON and publish changes live.
+            Sign in with Google, then edit the portfolio JSON and publish
+            changes live.
           </p>
         </header>
 
         <div id="status" class="status info">Checking configuration...</div>
 
         <div id="loginPanel" class="stack">
-          <label for="loginEmail">Admin Email</label>
-          <input
-            id="loginEmail"
-            type="email"
-            value="adarshmalayath@icloud.com"
-            autocomplete="username"
-            readonly
-          />
-          <label for="loginPassword">Password</label>
-          <input
-            id="loginPassword"
-            type="password"
-            autocomplete="current-password"
-            placeholder="Enter your password"
-          />
-          <button id="passwordLoginBtn" class="btn btn-primary" type="button">
-            Sign In
+          <button id="googleLoginBtn" class="btn btn-primary" type="button">
+            Continue with Google
           </button>
-          <p class="hint">Only the configured admin account is allowed.</p>
+          <p class="hint">Only the configured admin Google account is allowed.</p>
         </div>
 
         <div id="editorPanel" class="stack hidden">
