--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Adarsh Malayath | Full Stack Developer</title>
     <meta
       http-equiv="Content-Security-Policy"
-      content="default-src 'self'; base-uri 'self'; form-action 'self'; frame-ancestors 'none'; object-src 'none'; script-src 'self' https://www.gstatic.com; style-src 'self'; img-src 'self' data:; font-src 'self'; connect-src 'self' https://firestore.googleapis.com https://www.googleapis.com https://firebaseinstallations.googleapis.com; upgrade-insecure-requests; block-all-mixed-content"
+      content="default-src 'self'; base-uri 'self'; form-action 'self'; frame-ancestors 'none'; object-src 'none'; script-src 'self'; style-src 'self'; img-src 'self' data:; font-src 'self'; connect-src 'self' https://*.supabase.co; upgrade-insecure-requests; block-all-mixed-content"
     />
     <meta http-equiv="Referrer-Policy" content="no-referrer" />
     <meta name="referrer" content="no-referrer" />
