Fix live content fetch and add cache-busting for portfolio/admin modules

--- a/admin.html
+++ b/admin.html
@@ -237,6 +237,6 @@
       </p>
     </main>
 
-    <script type="module" src="admin.js"></script>
+    <script type="module" src="admin.js?v=20260215"></script>
   </body>
 </html>
