--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
       <p>© 2026 <span id="footerName">Adarsh Malayath</span></p>
     </footer>
 
-    <script src="script.js"></script>
-    <script type="module" src="portfolio-data.js"></script>
+    <script src="script.js?v=20260215"></script>
+    <script type="module" src="portfolio-data.js?v=20260215"></script>
   </body>
 </html>
