--- a/admin.html
+++ b/admin.html
@@ -15,6 +15,14 @@
       http-equiv="Permissions-Policy"
       content="camera=(), microphone=(), geolocation=()"
     />
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32.png?v=20260215" />
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16.png?v=20260215" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="apple-touch-icon.png?v=20260215"
+    />
+    <link rel="manifest" href="site.webmanifest?v=20260215" />
     <link rel="stylesheet" href="admin.css" />
   </head>
   <body>
