--- a/index.html
+++ b/index.html
@@ -19,15 +19,16 @@
       name="description"
       content="Portfolio website for Adarsh Malayath, full stack developer with banking technology experience in Java, PL/SQL, ReactJS, and production systems."
     />
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32.png?v=20260215" />
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16.png?v=20260215" />
+    <link rel="icon" type="image/svg+xml" href="brand-icon.svg?v=20260215v7" />
+    <link rel="icon" type="image/png" sizes="32x32" href="brand-icon-32.png?v=20260215v7" />
+    <link rel="icon" type="image/png" sizes="16x16" href="brand-icon-16.png?v=20260215v7" />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="apple-touch-icon.png?v=20260215"
+      href="brand-icon-180.png?v=20260215v7"
     />
-    <link rel="manifest" href="site.webmanifest?v=20260215" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="manifest" href="site.webmanifest?v=20260215v7" />
+    <link rel="stylesheet" href="styles.css?v=20260215v7" />
   </head>
   <body>
     <div class="bg-orb orb-a" aria-hidden="true"></div>
