Keep portfolio URL clean by removing index/hash from address bar

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       name="description"
       content="Portfolio website for Adarsh Malayath, full stack developer with banking technology experience in Java, PL/SQL, ReactJS, and production systems."
     />
+    <link rel="canonical" href="https://adarshmalayath.github.io/portfolio" />
     <link rel="icon" type="image/svg+xml" href="brand-icon.svg?v=20260215v7" />
     <link rel="icon" type="image/png" sizes="32x32" href="brand-icon-32.png?v=20260215v7" />
     <link rel="icon" type="image/png" sizes="16x16" href="brand-icon-16.png?v=20260215v7" />
@@ -270,7 +271,7 @@
       <p>© 2026 <span id="footerName">Adarsh Malayath</span></p>
     </footer>
 
-    <script src="script.js?v=20260215v8"></script>
+    <script src="script.js?v=20260215v9"></script>
     <script type="module" src="portfolio-data.js?v=20260215v8"></script>
   </body>
 </html>
