--- a/admin.html
+++ b/admin.html
@@ -272,7 +272,7 @@
       </section>
 
       <p class="back-link">
-        <a href="index.html">Back to Portfolio</a>
+        <a href="/portfolio">Back to Portfolio</a>
       </p>
     </main>
 
