Fix CV link resolution on clean /portfolio URL

--- a/index.html
+++ b/index.html
@@ -64,14 +64,14 @@
             id="contactEmailButton"
             >Contact Me</a
           >
-          <a
-            class="btn btn-secondary"
-            href="CV%20IT.pdf"
-            id="cvButton"
-            target="_blank"
-            rel="noopener noreferrer"
-            >View CV</a
-          >
+	          <a
+	            class="btn btn-secondary"
+	            href="/portfolio/CV%20IT.pdf"
+	            id="cvButton"
+	            target="_blank"
+	            rel="noopener noreferrer"
+	            >View CV</a
+	          >
         </div>
         <ul class="quick-contact">
           <li id="contactLocation">Leicester, United Kingdom</li>
@@ -271,7 +271,7 @@
       <p>© 2026 <span id="footerName">Adarsh Malayath</span></p>
     </footer>
 
-    <script src="script.js?v=20260215v11"></script>
-    <script type="module" src="portfolio-data.js?v=20260215v11"></script>
+    <script src="script.js?v=20260215v12"></script>
+    <script type="module" src="portfolio-data.js?v=20260215v12"></script>
   </body>
 </html>
