--- a/admin.html
+++ b/admin.html
@@ -15,16 +15,26 @@
       http-equiv="Permissions-Policy"
       content="camera=(), microphone=(), geolocation=()"
     />
-    <link rel="icon" type="image/svg+xml" href="brand-icon.svg?v=20260215v7" />
-    <link rel="icon" type="image/png" sizes="32x32" href="brand-icon-32.png?v=20260215v7" />
-    <link rel="icon" type="image/png" sizes="16x16" href="brand-icon-16.png?v=20260215v7" />
+    <link rel="icon" type="image/svg+xml" href="/portfolio/brand-icon.svg?v=20260215v14" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/portfolio/brand-icon-32.png?v=20260215v14"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/portfolio/brand-icon-16.png?v=20260215v14"
+    />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="brand-icon-180.png?v=20260215v7"
+      href="/portfolio/brand-icon-180.png?v=20260215v14"
     />
-    <link rel="manifest" href="site.webmanifest?v=20260215v7" />
-    <link rel="stylesheet" href="admin.css" />
+    <link rel="manifest" href="/portfolio/site.webmanifest?v=20260215v14" />
+    <link rel="stylesheet" href="/portfolio/admin.css?v=20260215v14" />
   </head>
   <body>
     <main class="admin-shell">
@@ -354,6 +364,6 @@
       </p>
     </main>
 
-    <script type="module" src="admin.js?v=20260215v12"></script>
+    <script type="module" src="/portfolio/admin.js?v=20260215v14"></script>
   </body>
 </html>
