--- a/index.html
+++ b/index.html
@@ -20,26 +20,26 @@
       content="Portfolio website for Adarsh Malayath, full stack developer with banking technology experience in Java, PL/SQL, ReactJS, and production systems."
     />
     <link rel="canonical" href="https://adarshmalayath.github.io/portfolio" />
-    <link rel="icon" type="image/svg+xml" href="/portfolio/brand-icon.svg?v=20260215v14" />
+    <link rel="icon" type="image/svg+xml" href="/portfolio/brand-icon.svg?v=20260215v15" />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="/portfolio/brand-icon-32.png?v=20260215v14"
+      href="/portfolio/brand-icon-32.png?v=20260215v15"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="/portfolio/brand-icon-16.png?v=20260215v14"
+      href="/portfolio/brand-icon-16.png?v=20260215v15"
     />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="/portfolio/brand-icon-180.png?v=20260215v14"
+      href="/portfolio/brand-icon-180.png?v=20260215v15"
     />
-    <link rel="manifest" href="/portfolio/site.webmanifest?v=20260215v14" />
-    <link rel="stylesheet" href="/portfolio/styles.css?v=20260215v14" />
+    <link rel="manifest" href="/portfolio/site.webmanifest?v=20260215v15" />
+    <link rel="stylesheet" href="/portfolio/styles.css?v=20260215v15" />
   </head>
   <body>
     <div class="bg-orb orb-a" aria-hidden="true"></div>
@@ -76,7 +76,7 @@
           >
 	          <a
 	            class="btn btn-secondary"
-	            href="/portfolio/CV%20IT.pdf"
+	            href="https://adarshmalayath.github.io/portfolio/CV%20IT.pdf"
 	            id="cvButton"
 	            target="_blank"
 	            rel="noopener noreferrer"
@@ -281,7 +281,7 @@
       <p>© 2026 <span id="footerName">Adarsh Malayath</span></p>
     </footer>
 
-    <script src="/portfolio/script.js?v=20260215v14"></script>
-    <script type="module" src="/portfolio/portfolio-data.js?v=20260215v14"></script>
+    <script src="/portfolio/script.js?v=20260215v15"></script>
+    <script type="module" src="/portfolio/portfolio-data.js?v=20260215v15"></script>
   </body>
 </html>
