--- a/index.html
+++ b/index.html
@@ -20,26 +20,26 @@
       content="Portfolio website for Adarsh Malayath, full stack developer with banking technology experience in Java, PL/SQL, ReactJS, and production systems."
     />
     <link rel="canonical" href="https://adarshmalayath.github.io/portfolio" />
-    <link rel="icon" type="image/svg+xml" href="/portfolio/brand-icon.svg?v=20260215v15" />
+    <link rel="icon" type="image/svg+xml" href="/portfolio/brand-icon.svg?v=20260215v16" />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="/portfolio/brand-icon-32.png?v=20260215v15"
+      href="/portfolio/brand-icon-32.png?v=20260215v16"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="/portfolio/brand-icon-16.png?v=20260215v15"
+      href="/portfolio/brand-icon-16.png?v=20260215v16"
     />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="/portfolio/brand-icon-180.png?v=20260215v15"
+      href="/portfolio/brand-icon-180.png?v=20260215v16"
     />
-    <link rel="manifest" href="/portfolio/site.webmanifest?v=20260215v15" />
-    <link rel="stylesheet" href="/portfolio/styles.css?v=20260215v15" />
+    <link rel="manifest" href="/portfolio/site.webmanifest?v=20260215v16" />
+    <link rel="stylesheet" href="/portfolio/styles.css?v=20260215v16" />
   </head>
   <body>
     <div class="bg-orb orb-a" aria-hidden="true"></div>
@@ -63,7 +63,8 @@
           Building secure, scalable products from backend to frontend.
         </h1>
         <p class="hero-copy" id="heroSummary">
-          Full stack developer with 2+ years of banking technology experience,
+          Full stack developer with 2 years and 10 months of banking technology
+          experience,
           delivering backend services, frontend interfaces, and production
           support using Java, PL/SQL, and ReactJS.
         </p>
@@ -265,8 +266,8 @@
 	        <h2 id="profileHeading">Profile</h2>
 	        <article class="card reveal" id="profileCard">
           <p>
-            Languages: Malayalam (Native), English (Advanced), Hindi, Tamil
-            (Upper Intermediate)
+            Languages: Malayalam (Native), English (Advanced), Hindi
+            (Intermediate), Tamil (Upper Intermediate)
           </p>
           <p>Leadership: IEEE & IEDC Core Member (2018 – 2022)</p>
           <p>Work Preference: Open to relocation and remote work</p>
@@ -281,7 +282,7 @@
       <p>© 2026 <span id="footerName">Adarsh Malayath</span></p>
     </footer>
 
-    <script src="/portfolio/script.js?v=20260215v15"></script>
-    <script type="module" src="/portfolio/portfolio-data.js?v=20260215v15"></script>
+    <script src="/portfolio/script.js?v=20260215v16"></script>
+    <script type="module" src="/portfolio/portfolio-data.js?v=20260215v16"></script>
   </body>
 </html>
